plumb typescript and a raf loop

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <title>jspit</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="index.css">
+<script src="index.ts"></script>
 
 <body>
+
+  <main></main>
+
+  <!-- XXX sample elements planned for by the stylesheet
 
   <header>
     Sample Header
@@ -37,6 +42,7 @@
   <footer>
     Sample Foooter
   </footer>
+  -->
 
 </body>
 
