prototyping movable tiles

--- a/index.html
+++ b/index.html
@@ -7,42 +7,12 @@
 
 <body>
 
+  <header>JS Pits tech demo</header>
+
   <main></main>
 
-  <!-- XXX sample elements planned for by the stylesheet
+  <footer></footer>
 
-  <header>
-    Sample Header
-  </header>
-
-  <main>
-    <p>
-      Hello World!<br>
-    </p>
-
-    <ul>
-      <li>some <a href="//nowhere.net">Nope</a></li>
-      <li>more <a href="//google.com">Gooo</a></li>
-    </ul>
-
-    <fieldset><legend>I Am</legend>
-      <input type="text" value="nom">
-      <button>Yes</button>
-      <button>No</button>
-    </fieldset>
-
-    <details><summary>such</summary>
-
-      much<br>
-
-    </details>
-
-  </main>
-
-  <footer>
-    Sample Foooter
-  </footer>
-  -->
 
 </body>
 
