restructure for multi-modality

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 <script src="index.ts"></script>
 
 <body>
+  <header>
+    JS Pits
+    <select id="demo"></select>
+  </header>
 
-  <header>JS Pits tech demo</header>
+  <main>
+    <aside class="modal">
+      <section>Loading...</section>
+    </aside>
 
-  <main></main>
+    <div class="grid"></div>
+  </main>
 
   <footer></footer>
 
