add extensible Sim controls

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
 <body>
   <header>
-    JS Pits
-    <select id="demo"></select>
-    <button id="reboot">Reboot</button>
+    <div class="ctl">
+      <label for="demo">Scenario:</label>
+      <select id="demo"></select>
+      <button id="reboot">Reboot</button>
+    </div>
   </header>
 
   <main>
