[jspit] elaborate index.html wrt snowpack template

--- a/packages/jspit/index.html
+++ b/packages/jspit/index.html
@@ -1,29 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script src="index.ts"></script>
+    <title>jspit</title>
+  </head>
+  <body>
 
-<title>jspit</title>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="index.css">
-<script src="index.ts"></script>
+    <header>
+      <div class="ctl">
+        <label for="demo">Scenario:</label>
+        <select id="demo"></select>
+      </div>
+    </header>
 
-<body>
-  <header>
-    <div class="ctl">
-      <label for="demo">Scenario:</label>
-      <select id="demo"></select>
-    </div>
-  </header>
+    <main>
+      <aside class="modal">
+        <section>
+          Loading...
+          <noscript>It's not much of a Pit without JavaScript!</noscript>
+        </section>
+      </aside>
 
-  <main>
-    <aside class="modal">
-      <section>Loading...</section>
-    </aside>
+      <div class="grid"></div>
+    </main>
 
-    <div class="grid"></div>
-  </main>
+    <footer></footer>
 
-  <footer></footer>
+  </body>
 
-
-</body>
-
+</html>
 <!-- vim:set ts=2 sw=2 expandtab -->
