--- a/packages/jspit/index.html
+++ b/packages/jspit/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <script src="index.ts"></script>
+    <script src="index.js" type="module"></script>
     <title>jspit</title>
   </head>
   <body>
