--- a/packages/jspit/index.html
+++ b/packages/jspit/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="index.js" type="module"></script>
     <title>jspit</title>
