[jspit] takeover Sim selection control

--- a/packages/jspit/src/index.html
+++ b/packages/jspit/src/index.html
@@ -9,12 +9,7 @@
   </head>
   <body>
 
-    <header>
-      <div class="ctl">
-        <label for="demo">Scenario:</label>
-        <select id="demo"></select>
-      </div>
-    </header>
+    <header></header>
 
     <main>
       <aside class="modal">
