--- a/packages/jspit/src/index.html
+++ b/packages/jspit/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="index.js" type="module"></script>
-    <title>jspit</title>
+    <title>jspit: Welcome screen</title>
   </head>
   <body>
 
@@ -13,10 +13,35 @@
 
     <main>
       <aside class="modal">
+
         <section>
-          Loading...
-          <noscript>It's not much of a Pit without JavaScript!</noscript>
+          <p>
+            Welcome to the Pits of JavaScript, where we experiment our way towards
+            a "game", spinning demos and other pieces of interest as the spirit
+            moves
+          </p>
+
+          <h3>Available Demos</h3>
+          <dl>
+
+            <dt><a href="colorboop.html">ColorBoop</a></dt><dd>
+              Basic demonstration of <code>TileGrid</code> movement and collisions.
+            </dd>
+
+            <dt><a href="dla.html">DLA</a></dt><dd>
+              An interactive demonstration of Diffusion Limited Aggregation
+              applied to procedural map generation.
+            </dd>
+
+          </dl>
         </section>
+
+        <section align="center">
+          <a href="//github.com/borkshop/js/tree/main/packages/jspit">Github</a>
+          |
+          <a href="//github.com/borkshop/js/blob/main/packages/jspit/stream.md">Dev Log</a>
+        </section>
+
       </aside>
     </main>
 
