--- a/packages/jspit/src/colorboop.html
+++ b/packages/jspit/src/colorboop.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <header>
+    <header style="display: none">
       <div id="inspector" class="ctl scen">// mouse-over a tile to inspect it</div>
     </header>
 
@@ -34,63 +34,24 @@
         </section>
 
       </aside>
-      <div class="grid inspectable"></div>
+      <div style="display: none" class="grid inspectable"></div>
     </main>
 
-    <footer></footer>
+    <footer style="display: none"></footer>
 
     <script type="module">
-      import {html, render} from 'lit-html';
-      import {ColorBoop, TileInspector} from './colorboop';
-      import {TileGrid} from './tiles';
-      import {KeyMap} from './input';
-
-      const head  = document.querySelector('header');
-      const foot  = document.querySelector('footer');
-      const main  = document.querySelector('main');
-      const modal = document.querySelector('main .modal');
-      const grid  = new TileGrid(document.querySelector('main .grid'));
-      const keys  = new KeyMap(document.body);
-      let world = null;
-
-      new TileInspector(grid, ({pos, tiles}) => render(tiles.length
-        ? html`@${pos.x},${pos.y} ${tiles.map(({id}) => id)}`
-        : html`// mouse-over a tile to inspect it`,
-        document.querySelector('#inspector')));
-
-      function playPause() {
-        if (!world) world = new ColorBoop(grid);
-        if (world.running) {
-          world.running = false;
-          modal.style.display = '';
-        } else {
-          modal.style.display = 'none';
-          world.run(keys.consumePresses.bind(keys), () => {
-            const {x, y} = grid.getTilePosition('at');
-            const {x: w, y: h} = grid.tileSize;
-            const {x: vx, y: vy, width: vw, height: vh} = grid.viewport;
-            render(
-              html`player@${x},${y}+${w}+${h} view@${vx},${vy}+${Math.floor(vw)}+${Math.floor(vh)}`,
-              foot);
-          });
-        }
-      }
-
-      keys.filter = (ev) => {
-        if (ev.key === 'Escape') {
-          if (ev.type === 'keydown') playPause();
-          return false;
-        }
-        if (modal.style.display !== 'none') return false;
-        return !ev.altKey && !ev.ctrlKey && !ev.metaKey;
-      };
-
-      document.querySelector('#run').addEventListener('click', playPause);
-      document.querySelector('#reset').addEventListener('click', () => {
-        world = null;
-        playPause();
+      import {init} from './colorboop';
+      init({
+        head:    document.querySelector('header'),
+        foot:    document.querySelector('footer'),
+        main:    document.querySelector('main'),
+        menu:    document.querySelector('main .modal'),
+        grid:    document.querySelector('main .grid'),
+        keys:    document.body,
+        run:     document.querySelector('#run'),
+        reset:   document.querySelector('#reset'),
+        inspect: document.querySelector('#inspector'),
       });
-
     </script>
   </body>
 
