[jspit/dla] choose random initial heading

--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -35,12 +35,21 @@
           </p>
 
           <fieldset><legend>Settings</legend><dl>
+
             <dt>Turns upto</dt>
             <dd><label for="dla-turnLeft">Left: Math.PI *</label>
-              <input id="dla-turnLeft" name="turnLeft" type="number" min="0" max="1" step="0.2">
+              <input id="dla-turnLeft" name="turnLeft" type="number" min="0" max="1" step="0.2" />
             </dd>
             <dd><label for="dla-turnRight">Right: Math.PI *</label>
-              <input id="dla-turnRight" name="turnRight" type="number" min="0" max="1" step="0.2">
+              <input id="dla-turnRight" name="turnRight" type="number" min="0" max="1" step="0.2" />
+            </dd>
+
+            <dt>Initial Heading</dt>
+            <dd><label for="dla-initBase">Base: Math.PI *</label>
+              <input id="dla-initBase" name="initBase" type="number" min="0" max="1" step="0.2" />
+            </dd>
+            <dd><label for="dla-initArc">Arc: Math.PI *</label>
+              <input id="dla-initArc" name="initArc" type="number" min="0" max="1" step="0.2" />
             </dd>
 
             <dt>Particles Move</dt><dd>
