--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -58,6 +58,17 @@
               <label for="dla-rate">every</label>
               <input id="dla-rate" name="rate" type="number" min="1" max="100">ms
             </dd>
+
+            <dd><label for="dla-clampMoves">
+              <input id="dla-clampMoves" name="clampMoves" type="checkbox" />
+              Disallow diagonal moves
+            </label></dd>
+
+            <dd><label for="dla-trackClampDebt">
+              <input id="dla-trackClampDebt" name="trackClampDebt" type="checkbox" />
+              Track accumulated diagonal heading debt
+            </label></dd>
+
           </dl></fieldset>
 
           <button id="run">Run</button>
