--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -52,12 +52,20 @@
               <input id="dla-initArc" name="initArc" type="number" min="0" max="1" step="0.2" />
             </dd>
 
-            <dt>Particles Move</dt><dd>
-              1 <!-- TODO -->
-              step <!-- TODO -->
-              <label for="dla-rate">every</label>
-              <input id="dla-rate" name="rate" type="number" min="1" max="100">ms
+            <dt>Particles Move</dt>
+
+            <dd>
+              <b>pre-player:</b>
+              1 step <label for="dla-genRate">every</label>
+              <input id="dla-genRate" name="genRate" type="number" min="1" max="100">ms
             </dd>
+
+            <dd>
+              <b>post-player:</b>
+              1 step <label for="dla-playRate">every</label>
+              <input id="dla-playRate" name="playRate" type="number" min="1" max="100">ms
+            </dd>
+
             <dd><label for="dla-clampMoves">
               <input id="dla-clampMoves" name="clampMoves" type="checkbox" />
               Disallow diagonal moves
