[jspit/dla] add <Escape> note

--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -82,8 +82,12 @@
 
           </dl></fieldset>
 
-          <button id="run">Run</button>
-          <button id="reset" disabled>Reset</button>
+          <div class="buttonbar">
+            <button id="run">Run</button>
+            <button id="reset" disabled>Reset</button>
+            <span style="float: right">NOTE: press <code>&lt;Escape&gt;</code> to return to show/hide this menu at any time</span>
+          </div>
+
           <!-- TODO fieldset and #reset mutex? -->
         </section>
 
