[jspit] switch to instantiated root index page

--- a/packages/jspit/src/index.html
+++ b/packages/jspit/src/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="index.js" type="module"></script>
+
+    <base href="." />
+
+    <!-- best effort to keep the welcome page fresh on github-pages -->
+    <meta http-equiv="cache-control" content="no-cache, no-store, max-age=0, must-revalidate, Private" />
+    <meta http-equiv="expires" content="Fri, 01 Jan 1990 00:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+
     <title>jspit: Welcome screen</title>
   </head>
   <body>
