[jspit] add version display to demo menus

--- a/packages/jspit/src/colorboop.html
+++ b/packages/jspit/src/colorboop.html
@@ -30,7 +30,10 @@
         </section>
 
         <section>
-          <h3><a href="index.html">Back to Welcome screen</a></h3>
+          <h3>
+            <div class="version" style="float: right"></div>
+            <a href="index.html">Back to Welcome screen</a>
+          </h3>
         </section>
 
       </aside>
