[jspit] improve version tagging
- easily selectable text
- fixed colorboop binding
- unify welcome page to use ui module
- dropped welcome page header/footer in passing, making it more like how
  the demo pages initially load

--- a/packages/jspit/src/colorboop.html
+++ b/packages/jspit/src/colorboop.html
@@ -51,6 +51,7 @@
         menu:    document.querySelector('main .modal'),
         grid:    document.querySelector('main .grid'),
         keys:    document.body,
+        version: document.querySelector('.version'),
         run:     document.querySelector('#run'),
         reset:   document.querySelector('#reset'),
         inspect: document.querySelector('#inspector'),
