--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -42,6 +42,10 @@
               <input id="dla-turnRight" name="turnRight" type="number" min="0" max="1" step="0.2" />
             </dd>
 
+            <dt><label for="dla-seeds">Seeds</label></dt><dd>
+              <input id="dla-seeds" name="seeds" size="32" type="text" />
+            </dd>
+
             <dt>Initial Heading</dt>
             <dd><label for="dla-initBase">Base: Math.PI *</label>
               <input id="dla-initBase" name="initBase" type="number" min="0" max="1" step="0.2" />
