[jspit/dla] improve escape note

--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -83,7 +83,8 @@
           <div class="buttonbar">
             <button id="run">Run</button>
             <button id="reset" disabled>Reset</button>
-            <span style="float: right">NOTE: press <code>&lt;Escape&gt;</code> to return to show/hide this menu at any time</span>
+            <span style="float: right"><code>&lt;Escape&gt;</code> to show/hide this menu at any time</span>
+            <br style="clear: both" />
           </div>
 
           <!-- TODO fieldset and #reset mutex? -->
