[jspit/dla] streamline initial heading setting UI

--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -46,12 +46,12 @@
               <input id="dla-seeds" name="seeds" size="32" type="text" />
             </dd>
 
-            <dt>Initial Heading</dt>
-            <dd><label for="dla-initBase">Base: Math.PI *</label>
+            <dt>Spawn Particles</dt>
+            <dd>
+              <label for="dla-initBase">Facing Math.PI * ( </label>
               <input id="dla-initBase" name="initBase" type="number" min="0" max="1" step="0.2" />
-            </dd>
-            <dd><label for="dla-initArc">Arc: Math.PI *</label>
-              <input id="dla-initArc" name="initArc" type="number" min="0" max="1" step="0.2" />
+              <label for="dla-initArc">+/-</label>
+              <input id="dla-initArc" name="initArc" type="number" min="0" max="1" step="0.2" /> ) / 2
             </dd>
 
             <dt>Particles Move</dt>
