[jspit/dla] add particle placement setting

--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -52,6 +52,10 @@
 
             <dt>Spawn Particles</dt>
             <dd>
+              <label for="dla-initWhere">Where:</label>
+              <select id="dla-initWhere" name="initWhere"></select>
+            </dd>
+            <dd>
               <label for="dla-initBase">Facing Math.PI * ( </label>
               <input id="dla-initBase" name="initBase" type="number" min="0" max="1" step="0.2" />
               <label for="dla-initArc">+/-</label>
