--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -76,9 +76,9 @@
               <input id="dla-playRate" name="playRate" type="number" min="1" max="100">ms
             </dd>
 
-            <dd><label for="dla-clampMoves">
-              <input id="dla-clampMoves" name="clampMoves" type="checkbox" />
-              Disallow diagonal moves
+            <dd><label for="dla-ordinalMoves">
+              <input id="dla-ordinalMoves" name="ordinalMoves" type="checkbox" />
+              Allow ordinal (diagonal) moves
             </label></dd>
 
             <dd>
