--- a/packages/jspit/src/dla.html
+++ b/packages/jspit/src/dla.html
@@ -59,7 +59,7 @@
               <label for="dla-initBase">Facing Math.PI * ( </label>
               <input id="dla-initBase" name="initBase" type="number" min="0" max="1" step="0.2" />
               <label for="dla-initArc">+/-</label>
-              <input id="dla-initArc" name="initArc" type="number" min="0" max="1" step="0.2" /> ) / 2
+              <input id="dla-initArc" name="initArc" type="number" min="0" max="1" step="0.2" /> )
             </dd>
 
             <dt>Particles Move</dt>
