[jspit] fix index show callsite

--- a/packages/jspit/src/index.html
+++ b/packages/jspit/src/index.html
@@ -55,7 +55,7 @@
       import {show} from './ui';
       show({
         version: document.querySelector('.version'),
-      });
+      }, false, false);
     </script>
 
   </body>
