--- a/packages/jspit/src/index.html
+++ b/packages/jspit/src/index.html
@@ -43,9 +43,11 @@
 
         <section align="center">
           <div class="version" style="float: right"></div>
-          <a href="//github.com/borkshop/js/tree/main/packages/jspit">Github</a>
-          |
-          <a href="//github.com/borkshop/js/blob/main/packages/jspit/stream.md">Dev Log</a>
+
+          <div class="linkbar">
+            <span><a href="//github.com/borkshop/js/tree/main/packages/jspit">Github</a></span>
+            <span><a href="//github.com/borkshop/js/blob/main/packages/jspit/stream.md">Dev Log</a></span>
+          </div>
         </section>
 
       </aside>
