[jspit/colorboop] define a top l2 header

--- a/packages/jspit/src/colorboop.html
+++ b/packages/jspit/src/colorboop.html
@@ -17,9 +17,9 @@
 
         <section>
           <h1 align="center">Welcome traveler</h1>
-          <p>
-            Boop a color, get a color!
-          </p>
+
+          <h2>Boop a color, get a color!</h2>
+
           <p>
             This is the first and simplest example of jspit's <code>TileGrid</code>.
           </p>
